--- a/client/less/challenges.less
+++ b/client/less/challenges.less
@@ -62,6 +62,10 @@
         .player {
             font-size: @font-size-base - 1px;
             font-weight: bold;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            width: 100%;
 
             &.winner {
                 font-size: @font-size-base + 3px;
